[package]
name = "multipathd_exporter"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/multipathd-structs",
]

[dependencies]
axum = "0.8.3"
multipathd-structs = { path = "crates/multipathd-structs" }
prometheus = "0.14.0"
serde_json = "1.0.140"
strum = "0.27.1"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "signal"] }
tracing-subscriber = "0.3.19"
